Update 'o2rssvokf-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:57b752fd35d97a5199b43e18112516231b1981b5@sha256:41de470e0d69c7259e0d5794dbabe596ae44cebf2b37e6467ebd80d14dcb1066

--- a/components/o2rssvokf-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/o2rssvokf-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: o2rssvokf-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:57b752fd35d97a5199b43e18112516231b1981b5@sha256:41de470e0d69c7259e0d5794dbabe596ae44cebf2b37e6467ebd80d14dcb1066
+          name: container-image
